[ZH-131] fix(rank): 코드 수정